2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/runtar.pl: Do not test for --transform as older gnutar
	  do not have it

2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: s/g_strcmp0/strcmp/
	* man/xml-source/amanda.8.xml: Add amanda-security.conf

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Add make_security_file.c
	* common-src/make_security_file.c: Typo

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix security
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl: Fix for non-root

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Typo

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Check for SINGLE_USERID
	* common-src/Makefile.am: Install example amanda-security.conf in
	  CONFIG_DIR

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* Add a /etc/amanda-security.conf file

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c: Filter option from COMMAND-OPTIONS

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (check_exec_for_suid_message): New
	  function to verify a binary is secure
	* client-src/client_util.h(check_exec_for_suid_message: Add prototype
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c, client-src/runtar.c: Call
	  check_exec_for_suid before running a binary as root
	* installcheck/ambsdtar.pl: Fix check
	* installcheck/amgtar.pl: Fix check

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/runtar.c: Filter tar arguments
	* installcheck/runtar.pl: Check runtar errorr
	* installcheck/Makefile.am: Add runtar.pl

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Fix for new URL path
