@@ -169,8 +169,6 @@ version.c: genversion$(EXEEXT)
 
 BUILT_SOURCES += genversion.h version.c
 
-EXTRA_DIST += amanda-security.conf make_security_file.c
-
 amanda-security.conf: make_security_file
 	./make_security_file
 
@@ -182,7 +180,7 @@ etcamanda_DATA = ${etcamanda_FILE}
 TEST_PROGS = file bsdsecurity
 
 CLEANFILES += *.test.c
-DISTCLEANFILES += version.c genversion genversion.h amanda-security.conf
+DISTCLEANFILES += version.c genversion genversion.h amanda-security.conf make_security_file
 
 # used for testing only
 
